package com.cqu.coit13230.AIBasedCustomerSupport.ticket;

public enum TicketPriority {
    LOW,
    MEDIUM,
    HIGH,
    CRITICAL
}
