package com.cqu.coit13230.AIBasedCustomerSupport.user;

public enum UserStatus {
    ACTIVE,
    INACTIVE
}
